<project>
  <parent>
    <groupId>io.teknek.deliverance</groupId>
    <artifactId>deliverance-parent</artifactId>
    <version>0.0.9-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>grace</artifactId>
  <name>grace</name>
  <properties>
    <!--
    <maven.compiler.source>24</maven.compiler.source>
    <maven.compiler.target>24</maven.compiler.target>
    <maven.compiler.release>24</maven.compiler.release>
    -->
    <build.plugins.plugin.version>3.5.3</build.plugins.plugin.version>


  </properties>

  <dependencies>
    <dependency>
      <groupId>io.teknek.dysfx</groupId>
      <artifactId>core</artifactId>
      <version>${dysfx.version}</version>
    </dependency>
    <dependency>
      <groupId>io.teknek.deliverance</groupId>
      <artifactId>safetensors</artifactId>
      <version>${project.version}</version>
    </dependency>
    <!--
    <dependency>
      <groupId>io.teknek.deliverance</groupId>
      <artifactId>core</artifactId>
      <version>${project.version}</version>
    </dependency>
    -->
    <dependency>
      <groupId>io.teknek.deliverance</groupId>
      <artifactId>safetensors</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>io.teknek.deliverance</groupId>
      <artifactId>native</artifactId>
      <version>${project.version}</version>
      <classifier>${os.detected.name}-${os.detected.arch}</classifier>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j-api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <!--
    <dependency>
      <groupId>net.serenity-bdd</groupId>
      <artifactId>serenity-junit5</artifactId>
      <version>${serenity.base.version}</version>
      <scope>test</scope>
    </dependency> -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf-simple.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.dropwizard.metrics</groupId>
      <artifactId>metrics-core</artifactId>
      <version>${metrics.version}</version>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>25</release>
          <jdkToolchain>
            <version>25</version>
          </jdkToolchain>
          <compilerArgs>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.vector</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.version}</version>
        <configuration>
          <argLine>
            --add-modules jdk.incubator.vector
            -Djdk.attach.allowAttachSelf=true
          </argLine>
        </configuration>
      </plugin>

    </plugins>
  </build>
</project>  
